@@ -16,6 +16,7 @@ use warnings;
 use diagnostics;
 use DBI;
 use Sys::Syslog;
+use Readonly;
 
 # Configuration parameters
 use constant {
@@ -28,7 +29,19 @@ use constant {
     VLAN_GUEST        => 5,
     VLAN_REGISTRATION => 2,
     VLAN_ISOLATION    => 3,
-    VLAN_NORMAL       => 1
+    VLAN_NORMAL       => 1,
+    VLAN_DENIED       => -1,  # When working with some particular APs (Cisco AP's for example), there is a restriction
+    # regarding VLANs and SSIDs: the same VLAN can NOT be present on two different SSIDs. For example, if the isolation
+    # VLAN is not available in a SSID and we try to put a device in that VLAN, the device will be in a connect loop. 
+    # In this case rather than creating two Isolation VLANs, we return -1 as the VLAN. This actually sends back an 
+    # 'Access-Reject' to the AP and the client stops trying to reconnect.
+    #
+    # Category configuration, by default we dont't use categories
+    #CATEGORY_GUEST    => 'Guest',
+    #CATEGORY_NORMAL   => 'Staff',
+    # SSID configuration
+    SSID_OPEN         => 'Open_SSID',
+    SSID_SECURE       => 'Secure_SSID'
 };
 
 require 5.8.8;
@@ -51,6 +64,8 @@ use constant    RLM_MODULE_NOOP=>      7;#  /* module succeeded without doing an
 use constant    RLM_MODULE_UPDATED=>   8;#  /* OK (pairs modified) */
 use constant    RLM_MODULE_NUMCODES=>  9;#  /* How many return codes there are */
 
+Readonly::Scalar our $NO_VIOLATION => 'No Violation';
+
 # Function to handle authorize
 sub authorize {
     # For debugging purposes only
@@ -72,7 +87,9 @@ sub authorize {
 
 # Function to handle post_auth
 sub post_auth {
-   
+    # For debugging purposes only
+    #&log_request_attributes;
+
     my $mac = $RAD_REQUEST{'Calling-Station-Id'};
     # freeradius 2 provides the switch_ip in NAS-IP-Address not Client-IP-Address 
     # Client-IP-Address is a non-standard freeradius1 attribute
@@ -83,13 +100,24 @@ sub post_auth {
         $is_eap_request = 1;
     }
 
+    my $ssid = find_ssid();
+    if (!defined($ssid)) {
+        # We were not able to parse SSID. For now, I don't think it's important enough to even log
+        # syslog("info", "Unable to parse SSID from request.");
+        if ($is_eap_request) {
+            $ssid = SSID_SECURE;
+        } else {
+            $ssid = SSID_OPEN;
+        }
+    }
 
     #format MAC
     $mac =~ s/ /0/g;
     $mac =~ s/-/:/g;
     $mac =~ s/\.//g;
     if (length($mac) == 12) {
-        $mac = substr($mac,0,2) . ":" . substr($mac,2,2) . ":" . substr($mac,4,2) . ":" . substr($mac,6,2) . ":" . substr($mac,8,2) . ":" . substr($mac,10,2);
+        $mac = substr($mac,0,2) . ":" . substr($mac,2,2) . ":" . substr($mac,4,2) . ":" . 
+               substr($mac,6,2) . ":" . substr($mac,8,2) . ":" . substr($mac,10,2);
     }
     $mac = lc($mac);
 
@@ -98,7 +126,7 @@ sub post_auth {
     &radiusd::radlog(1, "PacketFence USER: $user_name");
 
     if (length($mac) == 17) {
-        my $result = getVlan($switch_ip, $mac, $is_eap_request);
+        my $result = getVlan($switch_ip, $mac, $is_eap_request, $ssid);
         if (!defined($result) || $result =~ /^$/) {
             &radiusd::radlog(1, "PacketFence RESULT VLAN COULD NOT BE DETERMINED");
         } elsif ($result > 0) {
@@ -118,164 +146,130 @@ sub post_auth {
 }
 
 # Here is the decision process:
-# 
-# registered, guest, secure                      => disconnect (-1)
-# registered, guest, non-secure, violation       => disconnect (-1)*
-# registered, guest, non-secure, no violation    => guest VLAN
-# registered, normal user, secure, violation     => VLAN per violation
-# registered, normal user, secure, no violation  => normal VLAN
-# registered, normal user, non-secure            => disconnect (-1)
-# not-registered, secure                         => disconnect (-1)
-# not-registered, non-secure, violation          => disconnect (-1)*
-# not-registered, non-secure, no violation       => registration VLAN
 #
-# *: We disconnect here because if the violation VLAN is a VLAN that is unavailable on the
-#    non-secure SSID, the device will be in a connect loop. But if we return -1 the device 
-#    stop trying to connect.
-#    This breaks Nessus Scans on registration (since they generate a special violation) you
-#    might want to change this behaviour in that case.
-#    Keep in mind that the underlying problem is that you can't have a the same VLAN Id on
-#    both the secure and non-secure SSID.
+# non-secure, violation                          => VLAN per violation
+# non-secure, no violation, not-registered       => registration VLAN
+# non-secure, no violation, registered           => guest VLAN
+# secure, violation                              => VLAN per violation
+# secure, no violation, not-registered           => auto-registration, normal VLAN
+# secure, no violation, registered               => normal VLAN
 #
-# Here, we included all the code that was pfcmd_ap.pl to avoid costly forks for each request
 sub getVlan {
 
-    my ($switch_ip, $mac, $is_eap_request) = @_;
+    my ($switch_ip, $mac, $is_eap_request, $ssid) = @_;
     $mac = lc($mac);
     
     openlog("rlm_perl_packetfence", "perror,pid","user");
-    syslog("info", "getVlan called with switch_ip $switch_ip, mac $mac, is_eap_request $is_eap_request");
-    
+    syslog("info", "getVlan called with switch_ip $switch_ip, SSID $ssid, mac $mac, is_eap_request $is_eap_request");
+
     # create database connection
     my $mysql_connection = DBI->connect("dbi:mysql:dbname=".DB_NAME.";host=".DB_HOSTNAME, 
                                         DB_USER, DB_PASS, {PrintError => 0});
 
-    if (!defined($mysql_connection)) { 
+    if (!defined($mysql_connection)) {
       syslog("info", "Can't connect to the database.");
       closelog();
-      return undef;
+      return;
     }
+
+    # read node info (status, category, violations)
+    #
+    # Here are the possible results/scenarios:
+    #+-------------------+-----+----------+--------+---------------+
+    #| mac               | pid | category | status | isolationVlan |
+    #+-------------------+-----+----------+--------+---------------+
+    #| d8:d3:85:07:15:78 | 1   | ''       | unreg  | No Violation  | 
+    #| 00:12:cf:39:2d:89 | 1   | ''       | unreg  | isolationVlan |
+    #+-------------------+-----+----------+--------+---------------+
+    #| d8:d3:85:07:15:78 | 1   | ''       | reg    | No Violation  | 
+    #| 00:12:cf:39:2d:89 | 1   | ''       | reg    | isolationVlan |
+    #+-------------------+-----+----------+--------+---------------+
+    #| d8:d3:85:07:15:78 | 1   | Guest    | reg    | No Violation  | 
+    #| 00:12:cf:39:2d:89 | 1   | Guest    | reg    | isolationVlan |
+    #+-------------------+-----+----------+--------+---------------+
+
+    my $node_info = $mysql_connection->selectrow_hashref("
+        SELECT node.mac, node.pid, IFNULL(node_category.name,'') AS category, node.status, 
+	    IFNULL(class.vlan,'$NO_VIOLATION') AS isolationVlan 
+        FROM node 
+            LEFT JOIN node_category USING (category_id) 
+            LEFT JOIN violation ON node.mac=violation.mac AND violation.status='open' 
+            LEFT JOIN class ON violation.vid=class.vid 
+        WHERE node.mac='$mac'
+        ORDER BY class.priority DESC LIMIT 1");
 
     # check if mac exists already in database
     # if not, create the node
-    my $nodeExists = $mysql_connection->selectrow_array("SELECT count(*) FROM node WHERE mac='$mac'");
-    if ($nodeExists == 0) {
-      syslog("info", "node $mac does not yet exist in database -> will be created now");
-      $mysql_connection->do("INSERT INTO node(mac,detect_date,status,last_arp) VALUES('$mac',now(),'unreg',now())");
+    if ( !defined($node_info) ) {
+        syslog("info", "SSID $ssid: $mac does not yet exist in database -> will be created now");
+        $mysql_connection->do("
+            INSERT INTO node(mac,detect_date,status,last_arp) 
+            VALUES('$mac',now(),'unreg',now())");
+    } elsif (ref($node_info) ne 'HASH') {
+      syslog("info", "SSID $ssid: Error while reading info for $mac; VLAN could not be determined");
+      closelog();
+      $mysql_connection->disconnect();
+      return;
     }
-    
+
     # assume User is not wanted unless proven otherwise
-    my $correctVlan = -1;
-    
-    # check if registered
-    my $registrationExists = $mysql_connection->selectrow_array("SELECT count(*) FROM node WHERE mac='$mac' AND status='reg'");
-    if ($registrationExists != 0) {
+    my $correctVlan = VLAN_DENIED;
 
-      # --- REGISTERED ---
+    # if connecting to the non-scure SSID, only registered devices can get access.
+    if ($ssid eq SSID_OPEN) {
 
-      # check if 'guest'
-      my $isGuest = $mysql_connection->selectrow_array("SELECT count(*) FROM node WHERE mac='$mac' AND pid='guest'");
-      if ($isGuest == 1) {
+        # check if node has open violation(s). if so, returning violation VLAN
+        if ($node_info->{'isolationVlan'} eq $NO_VIOLATION) {
 
-        # --- GUEST ---
-
-        # is the guest on the secure SSID?
-        if ($is_eap_request == 1) {
-
-          # a guest on the secure SSID is not normal, return -1
-          syslog("info", "node $mac is a guest on secure SSID. Kicking out");
-          $correctVlan = -1;
+            # if not registered
+            if ($node_info->{'status'} eq 'unreg') {
+                $correctVlan = VLAN_REGISTRATION; 
+                syslog("info", "SSID $ssid: $mac is unregistered. Returning Vlan $correctVlan");
+            } else {
+                # by default we don't use categories but if we were to, below is the code that could be used:
+                #
+                # if ($node_info->{'category'} eq CATEGORY_GUEST) {
+                #     $correctVlan = VLAN_GUEST; 
+                # elsif ($node_info->{'category'} eq CATEGORY_AAAA) {
+                #     $correctVlan = VLAN_AAAA; 
+                # elsif ($node_info->{'category'} eq CATEGORY_BBBB) {
+                #     $correctVlan = VLAN_BBBB; 
+                # else {
+                #     $correctVlan = VLAN_DENIED;
+                # } 
+                $correctVlan = VLAN_GUEST; 
+                syslog("info", "SSID $ssid: $mac is registered. Returning Vlan $correctVlan");
+            }
 
         } else {
-
-          # a guest on the non-secure SSID, does he has any open violation?
-          my $nbOpenViolations = $mysql_connection->selectrow_array(
-                                                "SELECT count(*) FROM violation WHERE mac='$mac' and status='open'");
-          if ($nbOpenViolations > 0) {
-
-            # guest with a violation: send to VLAN configured in violation
-            syslog("info", "node $mac is a guest on non-secure SSID with a violation. Kicking out");
-            $correctVlan = -1;
-                                                
-            # TODO: Sending -1 instead of the correct violation VLAN breaks Nessus Scans on registration
-            # but its a lot friendlier with network ressources because clients like the iPhone won't retry
-            # connnections over and over if they get a -1 but if they get a VLAN unavailable they will retry
-            # $correctVlan = getViolationVLAN($mac, $mysql_connection);
-
-          } else {
-
-            # user is registered as a guest on a non-secure SSID and doesn't have violation: put in guest VLAN
-            $correctVlan = VLAN_GUEST;
-
-          }       
+            $correctVlan = getViolationVLAN($node_info->{'isolationVlan'});
+            syslog("info", "SSID $ssid: $mac has open violation(s). Kicking out");
         }
+    }
 
-      } else {
+    # if connecting to the Secure SSID, only devices registered as Normal with no violation can get access.
+    # we deny access to any other device!
+    if ($ssid eq SSID_SECURE) {
 
-        # --- NOT A GUEST ---
-
-        # is the registered user on secure SSID?
-        if ($is_eap_request == 1) {
-
-          # a registered user in the secure SSID, does he has any open violations?
-          my $nbOpenViolations = $mysql_connection->selectrow_array(
-                                                "SELECT count(*) FROM violation WHERE mac='$mac' and status='open'");
-          if ($nbOpenViolations > 0) {
-
-            # registered user with a violation: send to VLAN configured in violation
-            $correctVlan = getViolationVLAN($mac, $mysql_connection);
-            syslog("info", "node $mac is a registered user with a violation. Violation VLAN: $correctVlan");
-
-          } else {
-
-            # a registered user in the secure SSID without any violations: send in normal VLAN
+        # check if node has open violation(s). if so, returning violation VLAN
+        if ($node_info->{'isolationVlan'} eq $NO_VIOLATION) {
+            
+            # Here we think that since Radius already verified the users credentials when it gets here, 
+            # we automatically register their devices.
+            if ($node_info->{'status'} eq 'unreg') {
+                syslog("info", "SSID $ssid: $mac is not registered but user is authenticated -> registering mac");
+                $mysql_connection->do("
+                    UPDATE node 
+                    SET regdate=now(), status='reg'
+                    WHERE mac='$mac'");
+            }
+            # by default we don't use categories but if we were to, see code in the SSID_OPEN section
             $correctVlan = VLAN_NORMAL;
-
-          }
+            syslog("info", "SSID $ssid: $mac is registered. Returning Vlan $correctVlan");
         } else {
-
-          # a registered user on the non-secure SSID is not allowed!
-          syslog("info","node $mac is a registered user trying to access non-secure SSID. Kicking out");
-          $correctVlan = -1;
-
+            $correctVlan = getViolationVLAN($node_info->{'isolationVlan'});
+            syslog("info", "SSID $ssid: $mac has open violation(s). Returning Vlan $correctVlan");
         }
-      }
-
-    } else {
-
-      # --- NOT REGISTERED ---
-      
-      # is the unregistered user on secure SSID?
-      if ($is_eap_request == 1) {
-
-        # unregistered user shouldn't be on secure SSID, kicking out
-        syslog("info","node $mac is an unregistered user on secure SSID. Kicking out");
-        $correctVlan = -1;
-
-      } else {
-
-        # does the user has any open violation?
-        my $nbOpenViolations = $mysql_connection->selectrow_array(
-                                                "SELECT count(*) FROM violation WHERE mac='$mac' and status='open'");
-        if ($nbOpenViolations > 0) {
-
-          # --- OPEN VIOLATIONS ---
-          # unregistered user on non-secure SSID with violation, disconnect
-          syslog("info", "node $mac is an unregistered user with a violation. Kicking out");
-          $correctVlan = -1;
-
-          # TODO: Sending -1 instead of the correct violation VLAN breaks Nessus Scans on registration
-          # but its a lot friendlier with network ressources because clients like the iPhone won't retry
-          # connnections over and over if they get a -1 but if they get a VLAN unavailable they will retry
-          # $correctVlan = getViolationVLAN($mac, $mysql_connection);
-
-        } else {
-
-          # unregistered user on non-secure SSID with no open violation, present captive portal
-          $correctVlan = VLAN_REGISTRATION;
-
-        }
-      }
     }
 
     # update locationlog if necessary:
@@ -284,38 +278,89 @@ sub getVlan {
     #
     # In some setups we don't use VLAN IDs but VLAN Names. Since the vlan field in the locationlog table 
     # is varchar(4), we need to truncate the VLAN name and take only the first 4 characters.
-    #my $locationlogExists = $mysql_connection->selectrow_array("SELECT count(*) FROM locationlog WHERE mac='$mac' AND switch='$switch_ip' AND port='WIFI' and vlan='" . substr($correctVlan, 0, 4) . "' AND (end_time = 0 OR isnull(end_time))");
-    my $locationlogExists = $mysql_connection->selectrow_array("SELECT count(*) FROM locationlog WHERE mac='$mac' AND switch='$switch_ip' AND port='WIFI' and vlan='$correctVlan' AND (end_time = 0 OR isnull(end_time))");
+    #my $locationlogExists = $mysql_connection->selectrow_array("
+    #    SELECT count(*) 
+    #    FROM locationlog 
+    #    WHERE mac='$mac' AND switch='$switch_ip' AND port='WIFI' AND vlan='" . substr($correctVlan, 0, 4) . "' 
+    #        AND (end_time = 0 OR isnull(end_time))");
+    my $locationlogExists = $mysql_connection->selectrow_array("
+        SELECT count(*) 
+        FROM locationlog 
+        WHERE mac='$mac' AND switch='$switch_ip' AND port='WIFI' and vlan='$correctVlan' 
+            AND (end_time = 0 OR isnull(end_time))");
     if ($locationlogExists == 0) {
-        $mysql_connection->do("UPDATE locationlog SET end_time=now() WHERE mac='$mac' and (end_time = 0 OR isnull(end_time))");
-        $mysql_connection->do("INSERT INTO locationlog(mac,switch,port,vlan,start_time) VALUES('$mac','$switch_ip','WIFI',$correctVlan,now())");
-        #$mysql_connection->do("INSERT INTO locationlog(mac,switch,port,vlan,start_time) VALUES('$mac','$switch_ip','WIFI','" . substr($correctVlan, 0, 4) . "',now())");
+        $mysql_connection->do("
+            UPDATE locationlog 
+            SET end_time=now() 
+            WHERE mac='$mac' AND (end_time = 0 OR isnull(end_time))");
+        $mysql_connection->do("
+            INSERT INTO locationlog(mac,switch,port,vlan,start_time) 
+            VALUES('$mac','$switch_ip','WIFI',$correctVlan,now())");
+        #$mysql_connection->do("
+        #    INSERT INTO locationlog(mac,switch,port,vlan,start_time) 
+        #    VALUES('$mac','$switch_ip','WIFI','" . substr($correctVlan, 0, 4) . "',now())");
     }
-    $mysql_connection->do("UPDATE node SET switch='$switch_ip', port='WIFI' WHERE mac='$mac'");
-    
-    
-    
+    # By default we only store the AP's IP in the node record. We could store more info like the SSID name and the Vlan
+    #$mysql_connection->do("
+    #    UPDATE node SET switch='$switch_ip', port='WIFI', notes='$ssid', vlan='$correctVlan' 
+    #    WHERE mac='$mac'");
+    $mysql_connection->do("
+        UPDATE node 
+        SET switch='$switch_ip', port='WIFI' 
+        WHERE mac='$mac'");
+   
+   
     # return the correct VLAN, close resources
-    syslog("info", "returning VLAN $correctVlan for $mac");
     closelog();
     $mysql_connection->disconnect();
     return $correctVlan;
 }
 
 sub getViolationVLAN {
-  my ($mac, $mysql_connection) = @_;
-  my $vlanToGoTo = $mysql_connection->selectrow_array(
-                   "SELECT c.vlan FROM violation v, class c WHERE v.vid=c.vid AND mac='$mac' AND status='open' ".
-                   "ORDER BY priority desc LIMIT 1");
-  syslog("info","this violation says that it should go in vlan $vlanToGoTo");
-  if ($vlanToGoTo eq 'registrationVlan') {
+  my ($isolationVlan) = @_;
+  syslog("info","this violation says that it should go in vlan $isolationVlan");
+  if ($isolationVlan eq 'registrationVlan') {
     return VLAN_REGISTRATION;
-  } elsif ($vlanToGoTo eq 'normalVlan') {
+  } elsif ($isolationVlan eq 'normalVlan') {
     return VLAN_NORMAL;
   } else {
     # I could test only for isolation but there is no other value left so lets catch it all
     return VLAN_ISOLATION;
   }
+
+  # TODO: Sending VLAN_DENIED (-1) instead of the correct violation VLAN breaks Nessus Scans on registration
+  # but its a lot friendlier with network ressources because clients like the iPhone won't retry
+  # connnections over and over if they get a -1 but if they get a VLAN unavailable they will retry
+  #return VLAN_DENIED
+}
+
+sub find_ssid {
+
+    if (defined($RAD_REQUEST{'Cisco-AVPair'})) {
+        if ($RAD_REQUEST{'Cisco-AVPair'} =~ /^ssid=(.*)$/) { # ex: Cisco-AVPair = "ssid=Inverse-Secure"
+            return $1;
+        } else {
+            syslog("info", "Unable to parse SSID out of Cisco-AVPair: ".$RAD_REQUEST{'Cisco-AVPair'});
+            return;
+        }
+
+    } elsif (defined($RAD_REQUEST{'Aruba-Essid-Name'})) {
+        return $RAD_REQUEST{'Aruba-Essid-Name'};
+
+    } elsif (defined($RAD_REQUEST{'Colubris-AVPair'})) {
+        # With HP Procurve AP Ccontroller, we receive an array of settings in Colubris-AVPair:
+        # Colubris-AVPair = ssid=Inv_Controller
+        # Colubris-AVPair = group=Default Group
+        # Colubris-AVPair = phytype=IEEE802dot11g
+        foreach (@{$RAD_REQUEST{'Colubris-AVPair'}}) {
+            if (/^ssid=(.*)$/) { return $1; }
+        }
+        syslog("info", "Unable to parse SSID out of Colubris-AVPair: ".@{$RAD_REQUEST{'Colubris-AVPair'}});
+        return;
+
+    } else {
+        return;
+    }
 }
 
 # Function to handle authenticate
